Renames action.js id

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </h1> 
                 <div class="inner-div">
                     <p>We are a social enterprise made up of people from a variety of professions and specialisms all over the UK, who share a passion for physics and positive representations of the Black community. </p>
-                    <span id=readmore>
+                    <span id=ReadMore>
                         <p >
                              Our story began in 2006 at the world-renowned Blackett Laboratory – the physics department at Imperial College London. Dr Mark Richards, an eminent physicist and senior teaching fellow there, decided to take on two Black students as their academic and social mentor.
                         </p>
@@ -121,7 +121,7 @@
 
             <div class="col-md-4 ">
                 <div class="float-div">
-                    <img src="images/Mark 3.png" alt="Mark">
+                    <img src="images/mark_profile.png" alt="Mark">
                     <div class="float-div">
                         <h3 class="name"> Mark Richards </h3>
                         <p class="role"> Chair of the Committee</p>
@@ -131,7 +131,7 @@
     
             <div class="col-md-4">
                 <div class="float-div">
-                    <img  src="images/Jon.png" alt="Jon">
+                    <img  src="images/jon_profile.png" alt="Jon">
                     <div class="float-div">
                         <h3 class="name"> Jon Gordon </h3>
                         <p class="role"> Overall Strategic Lead</p>
@@ -194,7 +194,7 @@
 
         <div class="col-md-7 mission-div">
             <div class="mission-card">
-            <img class="mission-icon represent" src="images/Asset 1.png" alt="">
+            <img class="mission-icon represent" src="images/asset_represent.png" alt="">
             <p class="mission-title">Represent
             </p>
             <p>We highlight, celebrate, and give voice to an underrepresented group of Black individuals qualified in or engaging with physics.
@@ -202,7 +202,7 @@
             </div>
 
             <div class="mission-card">
-                <img class="mission-icon" src="images/Asset 2.png" alt="">
+                <img class="mission-icon" src="images/asset_connect.png" alt="">
                 <p class="mission-title">Connect
                 </p>
                 <p>We connect UK based Black physicists to each other to form a community of talent and knowledge, and share this passion with the world.
@@ -211,7 +211,7 @@
 
 
             <div class="mission-card">
-                <img class="mission-icon" src="images/Asset 3.png" alt="">
+                <img class="mission-icon" src="images/asset_inspire.png" alt="">
                 <p class="mission-title">Inspire
                 </p>
                 <p>We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or background – but especially the future generation of UK based Black physicists.
@@ -229,7 +229,7 @@
         <div class="col-md-4">
 
             <div>
-                <img class="icon" src="images/Asset 6.png" alt="">
+                <img class="icon" src="images/asset_increase.png" alt="">
                 <p>Increase the number of Black UK domiciled students enrolled onto a physics or physics-related course or scheme.
                 </p>
             </div>
@@ -238,7 +238,7 @@
         <div class="col-md-4">
 
             <div>
-                <img class="icon" src="images/Asset 5.png" alt="">
+                <img class="icon" src="images/asset_network.png" alt="">
                 <p>
                     Set up a network of support, mentorship, and opportunities for past, current, and future UK based Black physicists.
                 </p>
@@ -247,7 +247,7 @@
         <div class="col-md-4">
 
             <div>
-                <img class="icon" src="images/Asset 4.png" alt="">
+                <img class="icon" src="images/asset_raise.png" alt="">
                 <p>
                     Raise the awareness, knowledge and appreciation of physics in the Black community.
                 </p>
