Fixing site links

--- a/form.html
+++ b/form.html
@@ -53,10 +53,10 @@
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="index.html">Home <div class="nav-line"></div> <span
                                 class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="index.html/#about">About <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="#mission">Mission <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="#gallery">Gallery <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="#contact">Contact <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="index.html#about">About <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="index.html#mission">Mission <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="index.html#gallery">Gallery <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="index.html#cta">Contact <div class="nav-line"></div></a>
                         <a href="https://twitter.com/blackettlabfam" class="nav-item nav-link nav-icon"
                             target="_blank"><i class="fab fa-twitter"></i> </a><a
                             href="https://www.instagram.com/blackettlabfam/" class="nav-item nav-link nav-icon"
@@ -277,7 +277,7 @@
           </div>
 
           <div class="form-group">
-            <p class="data-promise">
+            <p class="subparagraph">
               Privacy Policy: As a member, we will only store your name, so that
               we will recognise your request to join our private Facebook group,
               and your answer to “what you hope to get out of joining us”. We
@@ -326,8 +326,8 @@
           class="form-group darkBox fade-in"
           style="display: none"
         >
-          <h3 class="subheading" style="
-          margin: 0 0 5% 0;">Having Trouble?</h3>
+          <p class="subparagraph" style="
+          margin: 0 0 5% 0;">Having Trouble?</p>
           <p>
             Perhaps your mobile signal is weak, or our servers are feeling
             overworked. Either way, we apologise for the inconvenience. If
