Changes form button colours and edits fonts for having trouble pop up div

--- a/form.html
+++ b/form.html
@@ -313,7 +313,7 @@
             type="submit"
             id="submit-form"
             name="submit-form"
-            class="btn btn-outline-dark"
+            class="btn btn-outline-light"
             disabled
           >
             <i class="contact-icon fas fa-paper-plane"></i> Submit
@@ -325,9 +325,9 @@
           class="form-group darkBox fade-in"
           style="display: none"
         >
-          <p class="subparagraph" style="
+          <p class="paragraph" style="
           margin: 0 0 5% 0;">Having Trouble?</p>
-          <p>
+          <p  class="subparagraph">
             Perhaps your mobile signal is weak, or our servers are feeling
             overworked. Either way, we apologise for the inconvenience. If
             you're fed up of trying to submit the form, feel free to email your
@@ -364,7 +364,7 @@
           <button
             type="button"
             id="copyData"
-            class="btn btn-lg btn-outline-light"
+            class="btn btn btn-outline-light"
           >
             Click to Copy Data
           </button>
