Adds white border to DarkBox object

--- a/form.html
+++ b/form.html
@@ -323,7 +323,7 @@
         <div
           id="havingTrouble"
           class="form-group darkBox fade-in"
-          style="display: none"
+          style="display: block"
         >
           <p class="paragraph" style="
           margin: 0 0 5% 0;">Having Trouble?</p>
@@ -334,7 +334,7 @@
             information to us instead by doing one of the following:
           </p>
           <div>
-            <ul class="centreList">
+            <ul class="centreList subparagraph">
               <li>
                 <b>Easiest option:</b> click
                 <a
@@ -364,7 +364,7 @@
           <button
             type="button"
             id="copyData"
-            class="btn btn btn-outline-light"
+            class="btn btn-outline-light"
           >
             Click to Copy Data
           </button>
