Updates wording, adds animations and team jobs/director titles

--- a/form.html
+++ b/form.html
@@ -97,12 +97,11 @@
             <p class="paragraph">
               
                 The purpose of this short questionnaire is for you to introduce
-                yourself to us, and for us to get to know you a bit more. If you have
-                any questions about joining, or you're using an old browser that doesn't support this form,
-                feel free to contact us at
+                yourself to us, and for us to get to know you a bit more. If you have any questions about joining, 
+                or you’re using a browser that doesn’t support this form, feel free to contact us directly at
                 <a class="hyperlink" href="mailto:community@theblackettlabfamily.com?subject=Join%20Request"
-                  >community@theblackettlabfamily.com </a
-                >
+                  >community@theblackettlabfamily.com</a
+                >.
               
               </p>
           <p class="subparagraph">
@@ -263,7 +262,7 @@
           <div class="form-group form-label">
             <label class="control-label" for="interests">
               To help us shape the dynamic of our network, please let us know
-              what you hope to get out of joining us
+              what you hope to get out of joining us.
             </label>
             <textarea
               class="form-control"
@@ -323,7 +322,7 @@
         <div
           id="havingTrouble"
           class="form-group darkBox fade-in"
-          style="display: block"
+          style="display: none"
         >
           <p class="paragraph" style="
           margin: 0 0 5% 0;">Having Trouble?</p>
@@ -380,7 +379,7 @@
               ><i class="footer-icon fab fa-instagram"></i
             ></a>
   
-            <p >© Copyright 2020 The Blackett Lab Family</p>
+            <p >© Copyright 2020 The Blackett Lab Family CIC</p>
             <p >All Rights Reserved.</p>
         </footer>
       </div>
