--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
     <section class=header id="header">
         
-        <div class="header-image"></div>
+        <div class="flex-box">
+               <div class="header-image" ></div>
             <div class="heading-div">
                 <h1 class="fade-in heading">UNITING BLACK MINDS TO SEE BEYOND.
                     <hr>
@@ -78,7 +79,7 @@
                 <p class="maintext">We are a collective of UK based Black physicists.</p>
                 <p class="subtext"> Our mission is changing the face of physics and is driven by our three pillars: to represent, to connect and to inspire.</p>
             </div>
-
+        </div>
 
     </section>
 
@@ -93,16 +94,16 @@
                         who share a passion for physics and positive representations of the Black community.
                     </p>
                     <span id=ReadMore>
-                        <p>
+                        <p class="subtext">
                             Our story began in 2006 at the world-renowned Blackett Laboratory – the physics department at Imperial College London. 
                             Dr Mark Richards, an eminent physicist and senior teaching fellow there, decided to take on two Black students as their academic and social mentor. 
 
                         </p>
-                        <p>
+                        <p class="subtext">
                             A tiny fraction of the student and staff body, our network of friends slowly expanded as the years rolled on. 
                             What began as three ‘Blackett Brothers’ would soon grow to become: <br> The Blackett Lab Family.
                         </p>
-                        <p>
+                        <p class="subtext">
                             Today, we are a national collective of talented, successful and influential people making waves in education, research, industry, technology, finance and law. 
                             Our ambition is to become influential in society, leading the conversation on diversity in physics and inspiring a new generation of Black minds in our communities - and beyond.
                         </p>
@@ -222,7 +223,7 @@
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
                         <img class="image" src="images/sophie_profile.png" alt="Sophie">
-                        <p class="job">PhD Student</p>
+                        <p class="job" style="top: 40%;">PhD Student</p>
                         </div>
                         <div >
                             <h2 class="name"> Sophie Martin </h2>
@@ -267,7 +268,7 @@
                 <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/mark_profile.png" alt="Mark">
+                            <img class="image" src="images/mark_profile.png" alt="Mark" style="width: 11rem;">
                             <p class="job"> Senior Lecturer </p>
                         </div>
                         <div >
@@ -305,7 +306,7 @@
                         <div><img class="mission-icon represent" src="images/asset_represent.png" alt=""></div>
                         <h2 class="mission-title">Represent
                         </h2>
-                        <p class="mission-text">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
+                        <p class="mission-text subtext">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
                             qualified in or engaging with physics.
                         </p>
                     </div>
@@ -314,7 +315,7 @@
                         <div><img class="mission-icon" src="images/asset_connect.png" alt=""></div>
                         <h2 class="mission-title">Connect
                         </h2>
-                        <p class="mission-text">We connect UK based Black physicists to each other to form a community of talent and
+                        <p class="mission-text subtext">We connect UK based Black physicists to each other to form a community of talent and
                             knowledge, and share this passion with the world.
                         </p>
                     </div>
@@ -324,7 +325,7 @@
                         <div><img class="mission-icon" src="images/asset_inspire.png" alt=""></div>
                         <h2 class="mission-title">Inspire
                         </h2>
-                        <p class="mission-text">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
+                        <p class="mission-text subtext">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
                             background – but especially the future generation of UK based Black physicists.
                         </p>
                     </div>
@@ -341,7 +342,7 @@
                 <div class="col-md-4 obj-div">
 
                     <div ><img class="obj-icon" src="images/asset_increase.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-once="true"></div>
-                    <p class="mission-text">Increase the number of Black UK domiciled students enrolled onto a physics or physics-related
+                    <p class="mission-text subtext">Increase the number of Black UK domiciled students enrolled onto a physics or physics-related
                             course or scheme.
                         </p>
 
@@ -349,7 +350,7 @@
                 <div class="col-md-4 obj-div">
 
                     <div ><img class="obj-icon" src="images/asset_network.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-once="true"></div>
-                    <p class="mission-text">
+                    <p class="mission-text subtext">
                             Set up a network of support, mentorship, and opportunities for past, current, and future UK
                             based Black physicists.
                         </p>
@@ -357,7 +358,7 @@
                 <div class="col-md-4 obj-div">
 
                     <div ><img class="obj-icon" src="images/asset_raise.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-once="true"></div>
-                    <p class="mission-text">
+                    <p class="mission-text subtext">
                             Raise the awareness, knowledge and appreciation of physics in the Black community.
                         </p>
                 </div>
@@ -373,7 +374,7 @@
                         <h1 class="heading">OUR MISSION
                             <hr>
                         </h1>
-                        <p class="maintext">Diversifying perceptions of physics and promoting Black representation at all levels in the
+                        <p class="maintext subtext">Diversifying perceptions of physics and promoting Black representation at all levels in the
                             field.
                         </p>
                     </div>
@@ -383,7 +384,7 @@
                         <img class="mission-icon" src="images/asset_represent.png" alt="">
                         <h3 class="mission-title">Represent
                         </h3>
-                        <p class="mission-text">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
+                        <p class="mission-text subtext">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
                             qualified in or engaging with physics.
                         </p>
                     </div>
@@ -392,7 +393,7 @@
                         <img class="mission-icon" src="images/asset_connect.png" alt="">
                         <h3 class="mission-title">Connect
                         </h3>
-                        <p class="mission-text">We connect UK based Black physicists to each other to form a community of talent and
+                        <p class="mission-text subtext">We connect UK based Black physicists to each other to form a community of talent and
                             knowledge, and share this passion with the world.
                         </p>
                     </div>
@@ -402,7 +403,7 @@
                         <img class="mission-icon" src="images/asset_inspire.png" alt="">
                         <h3 class="mission-title">Inspire
                         </h3>
-                        <p class="mission-text">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
+                        <p class="mission-text subtext">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
                             background – but especially the future generation of UK based Black physicists.
                         </p>
                     </div>
@@ -416,21 +417,23 @@
 
                 <div >
                         <div data-aos="fade-left" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_increase.png" alt=""></div>
-                        <p class="mission-text">Increase the number of Black UK domiciled students enrolled onto a physics or physics-related
+                        <p class="mission-text subtext">Increase the number of Black UK domiciled students enrolled onto a physics or physics-related
                             course or scheme.
                         </p>
 
                 </div>
                 <div class="center-div">
 
-                        <div data-aos="fade-right" data-aos-duration="2000" data-aos-once="true"><img  class="obj-icon" src="images/asset_network.png" alt=""></div>                        <p class="mission-text">
+                        <div data-aos="fade-right" data-aos-duration="2000" data-aos-once="true"><img  class="obj-icon" src="images/asset_network.png" alt=""></div>                        
+                        <p class="mission-text subtext">
                             Set up a network of support, mentorship, and opportunities for past, current, and future UK
                             based Black physicists.
                         </p>
                 </div>
                 <div>
 
-                        <div data-aos="fade-left" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_raise.png" alt=""></div>                        <p class="mission-text">
+                        <div data-aos="fade-left" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_raise.png" alt=""></div>                        
+                        <p class="mission-text subtext">
                             Raise the awareness, knowledge and appreciation of physics in the Black community.
                         </p>
                 </div>
@@ -503,13 +506,13 @@
                         </h1>
                     </div>
                     <div class=" col-9">
-                        <div id="galleryCarousel" class="carousel slide" data-ride="carousel" data-interval="7000">
+                        <div id="galleryCarousel-web" class="carousel slide" data-ride="carousel" data-interval="7000">
                             <div class="indicator-div">
                                 <ol class="carousel-indicators">
-                                    <li data-target="#galleryCarousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="#galleryCarousel" data-slide-to="1"></li>
-                                    <li data-target="#galleryCarousel" data-slide-to="2"></li>
-                                    <li data-target="#galleryCarousel" data-slide-to="3"></li>
+                                    <li data-target="#galleryCarousel-web" data-slide-to="0" class="active"></li>
+                                    <li data-target="#galleryCarousel-web" data-slide-to="1"></li>
+                                    <li data-target="#galleryCarousel-web" data-slide-to="2"></li>
+                                    <li data-target="#galleryCarousel-web" data-slide-to="3"></li>
                                 </ol>
                             </div>
     
