Fixing mobile header

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section class=header id="header">
         
-        <div class="flex-box">
+        <div class="flex-box" >
                <div class="header-image" ></div>
             <div class="heading-div">
                 <h1 class="fade-in heading">UNITING BLACK MINDS TO SEE BEYOND.
@@ -208,7 +208,7 @@
                 <div class="col-md-4">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/jon_profile.png" alt="Jon" style="margin-top: 0.8rem;">
+                            <img class="image" src="images/jon_profile.png" alt="Jon" >
                             <p class="job" style="top: 40%;">Assistant Headteacher</p>
                         </div>
                         <div >
@@ -222,8 +222,8 @@
                 <div class="col-md-4">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                        <img class="image" src="images/sophie_profile.png" alt="Sophie">
-                        <p class="job" style="top: 40%;">PhD Student</p>
+                        <img class="image" src="images/sophie_profile.png" alt="Sophie" >
+                        <p class="job">PhD Student</p>
                         </div>
                         <div >
                             <h2 class="name"> Sophie Martin </h2>
@@ -236,12 +236,10 @@
             </div>
 
             <div class="row">
-
-
                 <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/benyam_profile.png" alt="Benyam" style="width: 11rem;">
+                            <img class="image" src="images/benyam_profile.png" alt="Benyam" >
                             <p class="job">Undergraduate Student</p>
                         </div>   
                             <div>
@@ -268,7 +266,7 @@
                 <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/mark_profile.png" alt="Mark" style="width: 11rem;">
+                            <img class="image" src="images/mark_profile.png" alt="Mark" >
                             <p class="job"> Senior Lecturer </p>
                         </div>
                         <div >
@@ -416,7 +414,7 @@
             </h3>
 
                 <div >
-                        <div data-aos="fade-left" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_increase.png" alt=""></div>
+                        <div data-aos="fade-right" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_increase.png" alt=""></div>
                         <p class="mission-text subtext">Increase the number of Black UK domiciled students enrolled onto a physics or physics-related
                             course or scheme.
                         </p>
@@ -432,7 +430,7 @@
                 </div>
                 <div>
 
-                        <div data-aos="fade-left" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_raise.png" alt=""></div>                        
+                        <div data-aos="fade-right" data-aos-duration="2000" data-aos-once="true"><img class="obj-icon" src="images/asset_raise.png" alt=""></div>                        
                         <p class="mission-text subtext">
                             Raise the awareness, knowledge and appreciation of physics in the Black community.
                         </p>
