Tidies up mission divs

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="col-md-4">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
-                            <img class="image" src="images/jon_profile.png" alt="Jon" >
+                            <img class="image" src="images/jon_profile.png" alt="Jon" style="height:180px; margin-top: 1rem;" >
                             <p class="job" style="top: 40%;">Assistant Headteacher</p>
                         </div>
                         <div >
@@ -300,32 +300,38 @@
 
                 <div class="col-md-7 mission-div">
 
-                    <div class="mission-card" style="padding-top: 5rem;">
-                        <div><img class="mission-icon represent" src="images/asset_represent.png" alt=""></div>
-                        <h2 class="mission-title">Represent
-                        </h2>
-                        <p class="mission-text subtext">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
-                            qualified in or engaging with physics.
-                        </p>
+                    <div class="mission-card flex-box">
+                        <div class="mission-icon"><img src="images/asset_represent.png" alt=""></div>
+                        <div>
+                            <h2 class="mission-title">Represent
+                            </h2>
+                            <p class="mission-text subtext">We highlight, celebrate, and give voice to an underrepresented group of Black individuals
+                                qualified in or engaging with physics.
+                            </p>
+                        </div>
                     </div>
 
-                    <div class="mission-card">
-                        <div><img class="mission-icon" src="images/asset_connect.png" alt=""></div>
-                        <h2 class="mission-title">Connect
-                        </h2>
-                        <p class="mission-text subtext">We connect UK based Black physicists to each other to form a community of talent and
-                            knowledge, and share this passion with the world.
-                        </p>
+                    <div class="mission-card flex-box">
+                        <div class="mission-icon"><img src="images/asset_connect.png" alt=""></div>
+                        <div>
+                            <h2 class="mission-title">Connect
+                            </h2>
+                            <p class="mission-text subtext">We connect UK based Black physicists to each other to form a community of talent and
+                                knowledge, and share this passion with the world.
+                            </p>
+                        </div>
                     </div>
 
 
-                    <div class="mission-card">
-                        <div><img class="mission-icon" src="images/asset_inspire.png" alt=""></div>
-                        <h2 class="mission-title">Inspire
-                        </h2>
-                        <p class="mission-text subtext">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
-                            background – but especially the future generation of UK based Black physicists.
-                        </p>
+                    <div class="mission-card flex-box">
+                        <div class="mission-icon"><img src="images/asset_inspire.png" alt=""></div>
+                        <div>
+                            <h2 class="mission-title">Inspire
+                            </h2>
+                            <p class="mission-text subtext">We inspire ourselves and others – regardless of gender, ethnicity, orientation, ability, or
+                                background – but especially the future generation of UK based Black physicists.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
