Adds padding to page top

--- a/form.html
+++ b/form.html
@@ -69,7 +69,8 @@
     </div>
 
       <div class="shell form">
-        <h1 class="heading">Join Us!  <hr></h1>
+        <div class="header">
+        <h1 class="heading">Join Us!  <hr></h1></div>
         <div class="form">
            <p class="maintext">
                    The Blackett Lab Family provides a space for UK based Black physicists
