--- a/redirect.html
+++ b/redirect.html
@@ -70,20 +70,20 @@
     </div>
 
     <section>
-      <div class="shell redirect">
-        <h1 class="heading">Thank you! <hr></h1>
+      <div class="shell form">
+        <div class="header">
+        <h1 class="heading">Thank you! <hr></h1></div>
         
-            
         <p class="maintext">
             Based on your responses, membership is not the best way to engage with The Blackett Lab Family. However, we warmly recommend the following for your consideration:
         </p>
 
         <ul class="redirect-list subtext centreList">
             <li class="list-item">
-                If you are interested in following our activities, you can do so through our <a class="hyperlink" target="_blank" href="www.instagram.com/blackettlabfam"> Instagram</a>  page.
+                If you are interested in following our activities, you can do so through our<a class="hyperlink" target="_blank" href="www.instagram.com/blackettlabfam">Instagram</a>page.
             </li>
             <li class="list-item">
-                If you are interested in collaborating with us as an ally, whether that be through offering feedback, or potential partnerships or projects, we would love to hear from you. Please contact us at <a class="hyperlink" href="mailto:connect@theblackettlabfamily.com">connect@theblackettlabfamily.com.</a>
+                If you are interested in collaborating with us as an ally, whether that be through offering feedback, or potential partnerships or projects, we would love to hear from you. Please contact us at<a class="hyperlink" href="mailto:connect@theblackettlabfamily.com">connect@theblackettlabfamily.com.</a>
             </li>
             <li class="list-item">If you are interested in engaging with Black professionals in STEM or other fields through networking, mentoring or partnership, you may be interested in one of the following organisations:
             </li>
@@ -100,7 +100,7 @@
                     </div>
 
                         <div class="col-lg-3">
-                            <a href="https://www.acrcollective.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> ARCR </a>
+                            <a href="https://www.acrcollective.com/" class="redirect-link hyperlink" target="_blank"> <i class="footer-icon fa fa-link"></i> ACRC </a>
                         </div>
 
                         <div class="col-lg">
