--- a/welcome.html
+++ b/welcome.html
@@ -70,7 +70,8 @@
     </div>
 
     <section>
-        <div class="shell redirect">
+        <div class="shell form">
+            <div class="header">
             <h1 class="heading">
                 Facebook <hr>
             </h1>
@@ -81,7 +82,7 @@
             </p>
 
         <a href="https://www.facebook.com/groups/blackettlabfam" target="_blank" class="hyperlink"> <i class="footer-icon fab fa-facebook"></i> The Blackett Lab Family Facebook Group </a>
-        </div>
+        </div></div>
     </section>
 
     
