--- a/redirect.html
+++ b/redirect.html
@@ -14,7 +14,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles_01.css">
 
     <!-- Google Fonts -->
     <link href="third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
