Fixing curator bug, form/welcome page styling and adds footer

--- a/form.html
+++ b/form.html
@@ -79,17 +79,15 @@
           interaction, and fun, and encourage members to get involved with lots
           of social, educational, and professional opportunities. Our primary
           platform to connect with each other is Facebook, though you can engage
-          with us on Instagram<a
+          with us on Instagram <a
             href="https://www.instagram.com/blackettlabfam/"
             target="_blank"
             ><i class="fab fa-instagram"></i
-          ></a>
-          and Twitter<a
+          ></a> and Twitter <a
             href="https://twitter.com/blackettlabfam"
             target="_blank"
             ><i class="fab fa-twitter"></i
-          ></a>
-          too.  </p>
+          ></a> too.  </p>
          
             </div>
       </div>
