--- a/redirect.html
+++ b/redirect.html
@@ -126,7 +126,19 @@
 
     </div>
     </section>
-
+    <div class="center-div">
+        <footer class="footer" id="footer">
+            <a href="https://twitter.com/blackettlabfam" target="_blank"
+              ><i class="footer-icon fab fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/blackettlabfam/" target="_blank"
+              ><i class="footer-icon fab fa-instagram"></i
+            ></a>
+  
+            <p >© Copyright 2020 The Blackett Lab Family CIC</p>
+            <p >All Rights Reserved.</p>
+        </footer>
+      </div>
     
   </body>
 </html>
