Fixing mission id mobile bug issue #14

--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
     </section>
 
     
-    <section class="mission web-only" id="mission">
-        <div class="shell">
+    <section id="mission" >
+        <div class="mission web-only shell">
             <div class="row">
                 <div class="col-md-5">
                     <div class="heading-div">
@@ -337,7 +337,7 @@
 
             </div>
         </div>
-        <div class="shell">
+        <div class="web-only shell">
             <h3 style="text-align: center;">
                 Our long-term objectives are to:
             </h3>
@@ -369,11 +369,8 @@
 
             </div>
         </div>
-
-    </section>
-
-    <section class="mission mobile-only" id="mission">
-        <div class="shell">
+   
+        <div class="mobile-only shell">
                     <div class="heading-div">
                         <h1 class="heading">OUR MISSION
                             <hr>
@@ -383,7 +380,7 @@
                         </p>
                     </div>
         </div>
-                <div class="shell">
+                <div class="mobile-only shell">
                     <div class="mission-card flex-box">
                         <div class="mission-icon">
                             <img src="images/asset_represent.png" alt="">
@@ -427,7 +424,7 @@
                 </div>
 
 
-            <div class="center-div shell obj-div">
+            <div class="mobile-only center-div shell obj-div">
             <h3>
                 Our long-term objectives are to:
             </h3>
