Fixed &shy; typos.

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                     <div class="inner">
                         <p>For general enquires, partnerships, or collaborations, please email us at:
                         </p>
-                    <p class="subtext" style="word-wrap: break-word;">  connect@theblackettlab&shyfamily.com
+                    <p class="subtext" style="word-wrap: break-word;">  connect@theblackettlab&shy;family.com
                         </p>
                         <div class="white-border-round"><a href="mailto:connect@theblackettlabfamily.com"><i
                                     class="far fa-2x fa-envelope"></i></a></div>
@@ -632,7 +632,7 @@
 
                 <div class="row">
                     <div class="inner col-md-6  add-seperator">
-                        <p>Are you based in the UK, of Black heritage and have studied physics at A&shy Level/equivalent or
+                        <p>Are you based in the UK, of Black heritage and have studied physics at A&shy; Level/equivalent or
                             above, or have experience in a physics related field?
                         </p>
                     </div>
@@ -654,7 +654,7 @@
                              </span>
                             </p> </div>
                     <div class="inner col-md-6">
-                        <p class="subtext" style="word-wrap: break-word;">connect@theblackettlab&shyfamily.com</p>
+                        <p class="subtext" style="word-wrap: break-word;">connect@theblackettlab&shy;family.com</p>
 
                 </div></div>
 
