Renamed myFunction toggleReadMore.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="third-party/popper-1.16.0/popper.min.js"></script>
     <script src="third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
 
-    <script src="js/action.js"></script>
+    <script src="js/action_01.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/curator.js"></script>
 </head>
@@ -108,9 +108,9 @@
                             Our ambition is to become influential in society, leading the conversation on diversity in physics and inspiring a new generation of Black minds in our communities - and beyond.
                         </p>
                     </span>
-                    <button class="button read-more-btn" onclick="myFunction()" id="MoreBtn">Read More <i
+                    <button class="button read-more-btn" onclick="toggleReadMore()" id="MoreBtn">Read More <i
                             class="fas fa-chevron-down"></i></button>
-                    <button class="button read-more-btn" onclick="myFunction()" id="LessBtn">Read Less <i
+                    <button class="button read-more-btn" onclick="toggleReadMore()" id="LessBtn">Read Less <i
                             class="fas fa-chevron-up"></i></button>
                 </div>
             </div>
