--- a/join/index.html
+++ b/join/index.html
@@ -31,7 +31,7 @@
     <script src="../third-party/popper-1.16.0/popper.min.js"></script>
     <script src="../third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
 
-    <script src="../js/action.js"></script>
+    <script src="../js/action_01.js"></script>
 </head>
 
 <body>
@@ -114,9 +114,9 @@
             It would be more convenient for us if you could use the questionnaire, but we understand and applaud the determination of anyone who eschews all Google services.</p>
         </span>
 
-        <button class="button read-more-btn form-readmore" onclick="myFunction()" id="MoreBtn">Read More <i
+        <button class="button read-more-btn form-readmore" onclick="toggleReadMore()" id="MoreBtn">Read More <i
                 class="fas fa-chevron-down"></i></button>
-        <button class="button read-more-btn form-readmore" onclick="myFunction()" id="LessBtn">Read Less <i
+        <button class="button read-more-btn form-readmore" onclick="toggleReadMore()" id="LessBtn">Read Less <i
                 class="fas fa-chevron-up"></i></button>
 
           </p>
