Added spaces around links. Inserted Instagram icon.

--- a/join/redirect.html
+++ b/join/redirect.html
@@ -78,10 +78,10 @@
 
         <ul class="redirect-list subtext centreList">
             <li class="list-item">
-                If you are interested in following our activities, you can do so through our<a class="hyperlink" target="_blank" href="www.instagram.com/blackettlabfam">Instagram</a>page.
+                If you are interested in following our activities, you can do so through our <a class="hyperlink" target="_blank" href="www.instagram.com/blackettlabfam">Instagram <i class="fab fa-instagram"></i></a> page.
             </li>
             <li class="list-item">
-                If you are interested in collaborating with us as an ally, whether that be through offering feedback, or potential partnerships or projects, we would love to hear from you. Please contact us at<a class="hyperlink" href="mailto:connect@theblackettlabfamily.com">connect@theblackettlabfamily.com.</a>
+                If you are interested in collaborating with us as an ally, whether that be through offering feedback, or potential partnerships or projects, we would love to hear from you. Please contact us at <a class="hyperlink" href="mailto:connect@theblackettlabfamily.com">connect@theblackettlabfamily.com</a>.
             </li>
             <li class="list-item">If you are interested in engaging with Black professionals in STEM or other fields through networking, mentoring or partnership, you may be interested in one of the following organisations:
             </li>
