Fixed relative path issues on join.theblackettlabfamily.com.

--- a/join/redirect.html
+++ b/join/redirect.html
@@ -10,26 +10,34 @@
     content="Our Mission: Diversifying perceptions of physics and promoting Black representation at all levels in the field"
   />
     <title> Similar Organisations | The Blackett Lab Family </title>
-    <link rel="icon" href="../images/logo_black.png">
+    <link rel="icon" href="parent/images/logo_black.png">
 
-    <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="../third-party/bootstrap-4.5.3/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles_02.css">
+
+<!-- #######################################################################
+                                  IMPORTANT
+     #######################################################################
+     Do not replace absolute paths to theblackettlabfamily.com with relative
+     paths. This will either break join.theblackettlabfamily.com or force
+     visitors to download third-party resources twice.
+     ####################################################################### -->
+
+    <link rel="stylesheet" href="https://theblackettlabfamily.com/third-party/bootstrap-4.5.3/bootstrap.min.css">
+    <link rel="stylesheet" href="parent/css/styles_02.css">
 
     <!-- Google Fonts -->
-    <link href="../third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
-    <link href="../third-party/google-fonts/titillium-web/titillium.css" rel="stylesheet">
-    <link href="../third-party/google-fonts/bebas-neue/bebas-neue.css" rel="stylesheet">
+    <link href="https://theblackettlabfamily.com/third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
+    <link href="https://theblackettlabfamily.com/third-party/google-fonts/titillium-web/titillium.css" rel="stylesheet">
+    <link href="https://theblackettlabfamily.com/third-party/google-fonts/bebas-neue/bebas-neue.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link href="../third-party/fontawesome-5.15.1/css/all.min.css" rel="stylesheet">
+    <link href="https://theblackettlabfamily.com/third-party/fontawesome-5.15.1/css/all.min.css" rel="stylesheet">
 
     <!-- Animate on Scroll -->
-    <link href="../third-party/aos-2.3.1/aos.css" rel="stylesheet">
+    <link href="https://theblackettlabfamily.com/third-party/aos-2.3.1/aos.css" rel="stylesheet">
 
-    <script src="../third-party/jquery-3.5.1/jquery-3.5.1.slim.min.js"></script>
-    <script src="../third-party/popper-1.16.0/popper.min.js"></script>
-    <script src="../third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
+    <script src="https://theblackettlabfamily.com/third-party/jquery-3.5.1/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://theblackettlabfamily.com/third-party/popper-1.16.0/popper.min.js"></script>
+    <script src="https://theblackettlabfamily.com/third-party/bootstrap-4.5.3/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -39,7 +47,7 @@
         <section>
 
             <nav id="navbar" class="navbar sticky navbar-expand-lg navbar-dark">
-                <a href="../index.html"><img class="navbar-brand" src="../images/logo_white.png" alt="Brand Logo"></a>
+                <a href="https://theblackettlabfamily.com"><img class="navbar-brand" src="parent/images/logo_white.png" alt="Brand Logo"></a>
 
                 <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -49,12 +57,12 @@
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="../index.html">Home <div class="nav-line"></div> <span
+                        <a class="nav-item nav-link active" href="https://theblackettlabfamily.com">Home <div class="nav-line"></div> <span
                                 class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="../index.html#about">About <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="../index.html#mission">Mission <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="../index.html#gallery">Gallery <div class="nav-line"></div></a>
-                        <a class="nav-item nav-link" href="../index.html#cta">Contact <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#about">About <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#mission">Mission <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery <div class="nav-line"></div></a>
+                        <a class="nav-item nav-link" href="https://theblackettlabfamily.com/#cta">Contact <div class="nav-line"></div></a>
                         <a href="https://twitter.com/blackettlabfam" class="nav-item nav-link nav-icon"
                             target="_blank"><i class="fab fa-twitter"></i> </a><a
                             href="https://www.instagram.com/blackettlabfam/" class="nav-item nav-link nav-icon"
