--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                 We have met regularly (and virtually!) for fun, topical chat, and exchanging opportunities to collaborate together on cool social media projects, including work for the Institute of Physics and school outreach.
 
                              </span></p></div>
-                             <div class="white-border-round"><a href="join/index.html"><i
+                             <div class="white-border-round"><a href="https://join.theblackettlabfamily.com"><i
                                     class="fas fa-2x fa-user-plus"></i></a>
 
                         </div>
@@ -659,7 +659,7 @@
                 </div></div>
 
                 <div class="row">
-                    <div class="col-md-6"><a href="join/index.html">
+                    <div class="col-md-6"><a href="https://join.theblackettlabfamily.com">
                     <div class="white-border-round"><i
                         class="fas fa-2x fa-user-plus"></i></a>
 
