Updated privacy policy

--- a/join/index.html
+++ b/join/index.html
@@ -293,11 +293,11 @@
 
           <div class="form-group">
             <p class="subparagraph">
-              Privacy Policy: As a member we will only store your email address and name. This will help us recognise your request to join our private Facebook group,
-              and your answer to “what you hope to get out of joining us”. We
-              will retain this data indefinitely, but will happily delete it if
-              you ask us to do so. Your data will be encrypted prior to storage,
-              to protect your privacy in case of a data breach.
+              Privacy Policy: As a member, we will securely store your email address
+              and name (to help us recognise your request to join our private
+              Facebook group), and your answer to “what you hope to get out of
+              joining us”.
+              We will retain this data indefinitely, but will happily delete it if you ask us to do so.
             </p>
             <div class="form-check">
               <input
