--- a/join/index.html
+++ b/join/index.html
@@ -176,7 +176,7 @@
           </div>
 
           <div class="form-group form-row">
-            <div class="form-label col">
+            <div class="form-label col-sm-7">
               <input
                 type="text"
                 class="form-control"
@@ -188,10 +188,25 @@
               />
               <small id="small fbhelp" class="form-text text-muted"
                 >Optional: If this differs from your full name, enter your
-                Facebook account name here</small
+                Facebook account name here.</small
               >
             </div>
+
+          <div class="form-label col-sm-5">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value="yes"
+              id="hasFacebookAccount"
+              name="hasFacebookAccount"
+              autocomplete="off"
+            />
+            <label for="hasFacebookAccount">
+              Tick this box if you don't have or use a Facebook account.
+            </label>
           </div>
+          </div>
+
 
           <div class="form-group form-row">
             <div class="form-label col required">
@@ -400,7 +415,6 @@
         </footer>
       </div>
 
-    </section>
 
     <div id="loader"></div>
 
